langtools/test/tools/javac/typeAnnotations/failures/common/receiver/DuplicateAnnotationValue.out
DuplicateAnnotationValue.java:9:29: compiler.err.duplicate.annotation.member.value: value, A
1 error
